tests/error/modifier_errors/higher_order.err
Error: Unitary constraint violation (at $FILE:11:4)
   | 
 9 | def test_ho(f: Callable[[qubit], None], q: qubit) -> None:
10 |     # There is no way to use specify flags for f
11 |     f(q)
   |     ^^^^ This function cannot be called in a dagger context

Guppy compilation failed due to 1 previous error
